職人と設備がパッシブ、出荷できる、アクションできるのかを背景色で示すようにした

--- a/main.css
+++ b/main.css
@@ -75,6 +75,10 @@ h1: {
   height: 40px;
 }
 
+.market {
+  background-color: #cee4ae !important;
+}
+
 .hover {
   background-color: #cccccc !important;
 }
@@ -85,6 +89,10 @@ h1: {
 
 .hold {
   background-color: #0000ff !important;
+}
+
+.passive {
+  background-color: #cccccc !important;
 }
 
 .red {
